reports/code_review.log
Traceback (most recent call last):
  File "C:\Users\oliveirae\AppData\Local\Programs\Python\Python39\lib\site-packages\jupyter_cache\executors\utils.py", line 51, in single_nb_execution
    executenb(
  File "C:\Users\oliveirae\AppData\Local\Programs\Python\Python39\lib\site-packages\nbclient\client.py", line 1085, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\oliveirae\AppData\Local\Programs\Python\Python39\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Users\oliveirae\AppData\Local\Programs\Python\Python39\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\oliveirae\AppData\Local\Programs\Python\Python39\lib\asyncio\base_events.py", line 642, in run_until_complete
    return future.result()
  File "C:\Users\oliveirae\AppData\Local\Programs\Python\Python39\lib\site-packages\nbclient\client.py", line 551, in async_execute
    await self.async_execute_cell(
  File "C:\Users\oliveirae\AppData\Local\Programs\Python\Python39\lib\site-packages\nbclient\client.py", line 846, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "C:\Users\oliveirae\AppData\Local\Programs\Python\Python39\lib\site-packages\nbclient\client.py", line 748, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
# Code Review

:::{admonition} Acknowledgements:class: note
This video was created (and kindly shared with us) by Patanamon (Pick) Thongtanunam.
:::

from IPython.display import YouTubeVideo

YouTubeVideo('EGcPdW0c5DU')
------------------

[1;36m  Input [1;32mIn [1][1;36m[0m
[1;33m    :::{admonition} Acknowledgements:class: note[0m
[1;37m    ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (3789658874.py, line 3)

